Fix icons overlapping text at small sizes in the Netmatters & Treehouse sections

--- a/css/main.css
+++ b/css/main.css
@@ -272,7 +272,7 @@ footer .scroll-btn {
   padding-left: 40px;
   padding-right: 40px;
   padding-bottom: 40px;
-  padding-top: 5px;
+  padding-top: 30px;
   top: 30px;
   border-radius: 20px;
   position: relative;
@@ -419,6 +419,11 @@ html {
 
   .scroll-btn p {
     font-size: 20px;
+  }
+
+  #treehouse,
+#netmatters {
+    padding-top: 5px;
   }
 }
 @media screen and (min-width: 768px) {
