--- a/scss/partials/_media-queries.scss
+++ b/scss/partials/_media-queries.scss
@@ -25,6 +25,10 @@
     .scroll-btn p {
         font-size: 20px;
     }
+    #treehouse, 
+    #netmatters {
+        padding-top: 5px;
+    }
 }
 
 @media screen and (min-width: 768px) {
