--- a/scss/partials/pages/_scs.scss
+++ b/scss/partials/pages/_scs.scss
@@ -7,7 +7,7 @@
     padding-left: 40px;
     padding-right: 40px;
     padding-bottom: 40px;
-    padding-top: 5px;
+    padding-top: 30px;
     top: 30px;
     border-radius: 20px;
     position: relative;
